--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src="img/Design sem nome.png" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -43,7 +43,7 @@
                     <img src="img/logo-2.png" class="mb-3" width="563" height="278" loading="lazy">
                     <a href="#theweeknd" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero conhecer!</a>
                 </div>
-                <img src="img/the-weeknd-image.jpg"
+                <img src="img/The Weeknd (1).png"
                     alt="Imagem de The Weeknd em performance ao vivo"
                     title="The Weeknd - Performances Inesquecíveis" class="img-fluid img-inicio">
 
@@ -53,7 +53,7 @@
         <section id="theweeknd" class="my-5 pt-6 secao-theweeknd">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center">
-                    <img src="img/the-weeknd.jpg" class="rounded-pill" alt="The Weeknd" width="273" height="331" loading="lazy">
+                    <img src="img/The Weeknd (3).jpg" class="rounded-pill" alt="The Weeknd" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>Quem é The Weeknd?</h2>
@@ -68,18 +68,18 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/the-weeknd-1.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/The Weeknd (5).jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/the-weeknd-2.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/The Weeknd (4).jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/the-weeknd-3.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/The Weeknd (2).jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/the-weeknd-4.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/The Weeknd (6).jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
             </div>
